--- a/css/index.css
+++ b/css/index.css
@@ -1893,6 +1893,16 @@ blockquote > :last-child {
   width: 1.25em;
   text-align: center;
 }
+#bg_video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+  filter: brightness(0.65);
+}
 :root {
   --hl-color: #90a4ae;
   --hl-bg: #f6f8fa;
@@ -4268,7 +4278,7 @@ figure.highlight pre .javascript .function {
 #page-header {
   position: relative;
   width: 100%;
-  background-color: #121212;
+  background-color: rgba(18,18,18,0.478);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -4369,7 +4379,7 @@ figure.highlight pre .javascript .function {
   }
 }
 #page-header.post-bg {
-  height: 400px;
+  height: 200px;
 }
 @media screen and (max-width: 768px) {
   #page-header.post-bg {
@@ -7034,7 +7044,7 @@ blockquote.pullquote.right {
   --tab-button-color: rgba(255,255,255,0.7);
   --tab-button-hover-bg: #383838;
   --tab-button-active-bg: #121212;
-  --card-bg: #121212;
+  --card-bg: rgba(18,18,18,0.925);
   --sidebar-bg: #121212;
   --sidebar-menu-bg: #1f1f1f;
   --btn-hover-color: #787878;
